test/JDBC/expected/BABEL-1715.out
use master;
go

CREATE TABLE t1715 (a int, b int CONSTRAINT uk_a PRIMARY KEY (a));
go
INSERT INTO t1715 VALUES (1, 1);
INSERT INTO t1715 VALUES (2, 2);
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

INSERT INTO t1715 VALUES (2, 3);
go
~~ERROR (Code: 2627)~~

~~ERROR (Message: duplicate key value violates unique constraint "uk_at1715309394cc13ed0160c093d0a0f82cb1c0")~~

drop table t1715;
go


CREATE TABLE t1715_2 (a int, b as a+1 CONSTRAINT uk_a PRIMARY KEY (a));
go
INSERT INTO t1715_2 (a) VALUES (1);
INSERT INTO t1715_2 (a) VALUES (2);
go
~~ROW COUNT: 1~~

~~ROW COUNT: 1~~

INSERT INTO t1715_2 (a) VALUES (2);
go
~~ERROR (Code: 2627)~~

~~ERROR (Message: duplicate key value violates unique constraint "uk_at1715_2309394cc13ed0160c093d0a0f82cb1c0")~~

drop table t1715_2;
go


CREATE TABLE t1715_invalid (a int b int);
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "b")~~

CREATE TABLE t1715_invalid (a int CONSTRAINT uk_a PRIMARY KEY (a) b int);
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "b")~~

CREATE TABLE t1715_invalid (a int CONSTRAINT uk_a PRIMARY KEY (a) CONSTRAINT uk_b UNIQUE (b));
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "CONSTRAINT")~~



-- cx table
CREATE TABLE cx_t1715 ( name sysname NOT NULL, principal_id int NOT NULL,  diagram_id int PRIMARY KEY IDENTITY, version int, definition varbinary(max) CONSTRAINT UK_principal_name UNIQUE ( principal_id, name ) );
go

DROP TABLE cx_t1715;
go
